--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
             <version>1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+
+
     </dependencies>
 
     <build>
